# qrsmith

./: .gitattributes  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml
src/: main.rs
